@startuml

title __STATES's Class Diagram__\n

  namespace state_pattern.states {
    class state_pattern.states.BlinkingGreen {
        - clip : Clip
        - sound : AudioInputStream
        - time : long
        + BlinkingGreen()
        + getTime()
        + nextState()
        + setTrafficLights()
    }
  }
  

  namespace state_pattern.states {
    class state_pattern.states.OnGreen {
        - clip : Clip
        - sound : AudioInputStream
        - time : long
        + OnGreen()
        + getTime()
        + nextState()
        + setTrafficLights()
    }
  }
  

  namespace state_pattern.states {
    class state_pattern.states.OnOrange {
        - clip : Clip
        - sound : AudioInputStream
        - time : long
        + OnOrange()
        + getTime()
        + nextState()
        + setTrafficLights()
    }
  }
  

  namespace state_pattern.states {
    class state_pattern.states.OnRed {
        - clip : Clip
        - sound : AudioInputStream
        - time : long
        + OnRed()
        + getTime()
        + nextState()
        + setTrafficLights()
    }
  }
  

  namespace state_pattern.states {
    interface state_pattern.states.State {
        {abstract} + getTime()
        {abstract} + nextState()
        {abstract} + setTrafficLights()
    }
  }
  

  state_pattern.states.BlinkingGreen .up.|> state_pattern.states.State
  state_pattern.states.BlinkingGreen o-- state_pattern.traffic_light_system.TrafficLight : trafficLight
  state_pattern.states.OnGreen .up.|> state_pattern.states.State
  state_pattern.states.OnGreen o-- state_pattern.traffic_light_system.TrafficLight : trafficLight
  state_pattern.states.OnOrange .up.|> state_pattern.states.State
  state_pattern.states.OnOrange o-- state_pattern.traffic_light_system.TrafficLight : trafficLight
  state_pattern.states.OnRed .up.|> state_pattern.states.State
  state_pattern.states.OnRed o-- state_pattern.traffic_light_system.TrafficLight : trafficLight


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
